plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'my.oj'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
	implementation 'io.projectreactor:reactor-core:3.5.0'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2:2.2.224'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

	implementation "io.github.openfeign.querydsl:querydsl-jpa:5.6.1:jakarta"
	implementation "io.github.openfeign.querydsl:querydsl-core:5.6.1"
	annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:5.6.1:jakarta"

	annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
}


def generated = layout.buildDirectory.dir("generated/sources/annotationProcessor/java/main").get().asFile
sourceSets {
	main {
		java {
			srcDirs += [generated]
		}
	}
}



tasks.named('test') {
    useJUnitPlatform {
        if (!Boolean.getBoolean("includeLoadTests")) {
            excludeTags "load-test"
        }
    }
    // Run tests with MySQL-backed 'test' profile by default
    systemProperty "spring.profiles.active", System.getProperty("spring.profiles.active", "test")
}
